# find-your-specialist

./: .env.example  .pre-commit-config.yaml  README.md  main.py  prompts.json  pyproject.toml  run_dev.bat  run_dev.sh  run_prod.bat  run_prod.sh  setup.bat  setup.sh
frontend/: constants.ts  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/models/: route.ts
frontend/app/api/specialists/: route.ts
frontend/app/chat/: chat.module.css  page.tsx
frontend/components/: BackLink.module.css  BackLink.tsx  Dropdown.module.css  Dropdown.tsx  MatrixBackground.module.css
src/: pipeline.py  rag.py  rag_local.py  setup.py  types.py  utils.py
